# lota

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: README.md
script/: Makefile  install.sh
src/: CMakeLists.txt  check.c  download.c  log.h  lota.h  main.c  md5.c  md5.h  mqtt.c
test/: ota_publish.c
